# gdbundle-debuginfod

./: README.md  pyproject.toml
.github/workflow/: ci.yml
.github/workflows/: ci.yml  release.yml
gdbundle_debuginfod/: gdb_loader.py  lldb_loader.py
gdbundle_debuginfod/scripts/: dbgd_plugin.py  debuginfod.py  debuginfod_gdb.py  debuginfod_lldb.py  debuginfod_plugin.py
tests/: test_gdbundle_debuginfod.py
