[tool.poetry]
name = "gdbundle-debuginfod"
version = "0.1.0"
description = "GDB and LLDB plugins to enable older versions of GDB and LLDB to support debuginfod"
authors = ["Matt Schulte <schultetwin1@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
progressist = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
